--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 mini-redis = "0.4"
 bytes = "1"
+tokio-stream = "0.1.14"
